# HLS-Parser

./: Cargo.toml  README.md  testMaster.m3u8  testMediaPlaylist.m3u8  test_streams.toml
src/: main.rs  parsers.rs
src/error_lib/: mod.rs
src/parsers/: master_playlist.rs  media_playlist.rs  variant_playlist.rs
src/tag_lib/: mod.rs
src/utils_lib/: mod.rs
