[package]
name = "hls-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
reqwest = { version = "0.11.13", features = ["json"] } # reqwest with JSON parsing support
futures = "0.3.25" # for our async / await blocks
tokio = { version = "1.24.2", features = ["full"] } # for our async runtime